--- a/themes/bears/design/style.css
+++ b/themes/bears/design/style.css
@@ -1340,19 +1340,29 @@ body.Post .Popup a.Close {
 }
 
 code, pre {
-   border-radius: 2px;
-   -moz-border-radius: 2px;
-   -webkit-border-radius: 2px;
-   background: #ff9;
-   padding: 4px 8px;
+   padding: 9.5px;
+   margin: 0 0 10px;
+   font-size: 13px;
+   line-height: 20px;
+   word-break: break-all;
+   word-wrap: break-word;
    white-space: pre;
-   font-family: monospace;
-   overflow: auto;
-	border: 1px solid #eec;
+   white-space: pre-wrap;
+   background-color: #f5f5f5;
+   border: 1px solid #ccc;
+   border: 1px solid rgba(0, 0, 0, 0.15);
+   -webkit-border-radius: 4px;
+   -moz-border-radius: 4px;
+   border-radius: 4px;
+   font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+   color: #861EF5;
 }
 pre {
    display: block;
 }
+
+
+
 .Preview .Message strong,
 .MessageList .Message strong {
    font-weight: bold;
@@ -1993,20 +2003,21 @@ div.Popup form ul li label.RadioLabel {
    margin: 2px 0;
    padding: 4px 9px;
    font-size: 13px;
-   color: #ddd;
+   color: #ccc;
+   background: #eee;
+   border: 1px solid #aaa;
+   border-left: none;
+   border-right: none;
    line-height: 1;
 }
-#Foot a {
-	display: none;
-   color: #ccc;
-}
+
 #Foot a:hover {
    color: #aaa;
 }
 #Foot div {
 	width: 960px;
 	padding: 6px 0;
-	margin: 20px auto 0;
+	margin: 10px auto 10px;
 	text-align: left;
 }
 
@@ -3321,8 +3332,10 @@ body.embed .Connect h2 {
 }
 
 
+
+
 @media all and (min-width: 1200px ) {
-	#Body {
+	#Head .Menu, #Body, #Foot div {
 		width: 75%;
 	}
 	
@@ -3342,3 +3355,7 @@ body.embed .Connect h2 {
 		width: 17%;
 	}
 }
+
+
+
+
